@@ -1313,7 +1313,7 @@ Then check that $\lt{R}{\vect{y}}=9+9x$.
 </exercise>
 
 <exercise type="M" number="60" rough="zero linear transformation">
-<problem contributor="robertbeezer">Suppose $U$ and $V$ are vector spaces.  Define the function $\ltdefn{Z}{U}{V}$ by $\lt{T}{\vect{u}}=\zerovector_{V}$ for every $\vect{u}\in U$.  Then by <acroref type="exercise" acro="LT.M60" />, $Z$ is a linear transformation.  Formulate a condition on $U$ that is equivalent to $Z$ being an injective linear transformation.   In other words, fill in the blank to complete the following statement (and then give a proof):  $Z$ is injective if and only if $U$ is \rule{1in}{1pt}. (See <acroref type="exercise" acro="SLT.M60" />, <acroref type="exercise" acro="IVLT.M60" />.)
+<problem contributor="robertbeezer">Suppose $U$ and $V$ are vector spaces.  Define the function $\ltdefn{Z}{U}{V}$ by $\lt{T}{\vect{u}}=\zerovector_{V}$ for every $\vect{u}\in U$.  Then by <acroref type="exercise" acro="LT.M60" />, $Z$ is a linear transformation.  Formulate a condition on $U$ that is equivalent to $Z$ being an injective linear transformation.   In other words, fill in the blank to complete the following statement (and then give a proof):  $Z$ is injective if and only if $U$ is  <rule width="1in" height="1pt" />. (See <acroref type="exercise" acro="SLT.M60" />, <acroref type="exercise" acro="IVLT.M60" />.)
 </problem>
 </exercise>
 
