@@ -1226,7 +1226,7 @@ If we add these vectors together, and then change the third component of the res
 </exercise>
 
 <exercise type="M" number="60" rough="zero linear transformation">
-<problem contributor="robertbeezer">Suppose $U$ and $V$ are vector spaces.  Define the function $\ltdefn{Z}{U}{V}$ by $\lt{T}{\vect{u}}=\zerovector_{V}$ for every $\vect{u}\in U$.  Then by <acroref type="exercise" acro="LT.M60" />, $Z$ is a linear transformation.  Formulate a condition on $V$ that is equivalent to $Z$ being an surjective linear transformation.   In other words, fill in the blank to complete the following statement (and then give a proof):  $Z$ is surjective if and only if $V$ is \rule{1in}{1pt}. (See <acroref type="exercise" acro="ILT.M60" />, <acroref type="exercise" acro="IVLT.M60" />.)
+<problem contributor="robertbeezer">Suppose $U$ and $V$ are vector spaces.  Define the function $\ltdefn{Z}{U}{V}$ by $\lt{T}{\vect{u}}=\zerovector_{V}$ for every $\vect{u}\in U$.  Then by <acroref type="exercise" acro="LT.M60" />, $Z$ is a linear transformation.  Formulate a condition on $V$ that is equivalent to $Z$ being an surjective linear transformation.   In other words, fill in the blank to complete the following statement (and then give a proof):  $Z$ is surjective if and only if $V$ is <rule width="1in" height="1pt" />. (See <acroref type="exercise" acro="ILT.M60" />, <acroref type="exercise" acro="IVLT.M60" />.)
 </problem>
 </exercise>
 
