@@ -47,6 +47,7 @@ Typo:  LaTeX/XML formatting in Solution ILT.C40 (Julie Nelson)
 Typo:  Section LT, after Example MFLT, "not an accident" (Kyle Whitcomb)
 Typo:  Section SLT, before Diagram SLT, domain/codomain confusion (Kyle Whitcomb)
 Typo:  Section IVLT, after Definition IVS, "given", "a" reversed (Kyle Whitcomb)
+Typo:  LaTeX rules for fill-in-the-blank exercises (Julie Nelson)
 
 MAJOR SOURCE FORMAT CHANGE
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
